组件修改